@@ -196,16 +196,13 @@ public class GridWithEditorInDetails<T> extends CustomField<List<T>> implements 
 
 	public T newInstance(Class<T> cls)
 	{
-		T myObject;
 		try
 		{
-			myObject = cls.newInstance();
+			return cls.getDeclaredConstructor().newInstance();
 		} catch (Exception e)
 		{
 			throw new InternalException(e.getMessage());
 		}
-
-		return myObject;
 	}
 	
 	public Column<T, ?> addTextColumn(ValueProvider<T, String> valueProvider, String caption, int expandRatio)
